# seed

./: CMakeLists.txt  README.md  seed.hpp
.cache/clangd/index/: Color.hpp.212190E0CB1C0636.idx  Math.hpp.9F5DA511EE04C4E1.idx  Strings.hpp.B2912860149F697E.idx  Utils.hpp.EC3EF2FAC9D73A26.idx  Vector.hpp.1B415235386CEA25.idx  average.cpp.957B86D9F2825FAA.idx  clean_decimals.cpp.C10417956A5964A1.idx  color.cpp.23BD3073574B7675.idx  doctest.h.0BC0252D1E50AC0E.idx  limits.cpp.F564CC897DDA031C.idx  main.cpp.4E2FAE1D81E34AED.idx  math.cpp.D4703839EB0E97DB.idx  normalize.cpp.9867FF38D7095D4E.idx  round.cpp.0067FEDC42A208F7.idx  std.hpp.B07C7A7B8B1E615C.idx  utils.cpp.5330AFAD111B74AB.idx  vector.cpp.F764534A111FBDC1.idx
include/: ArgsParser.hpp  Crypto.hpp  Filepaths.hpp  Files.hpp  HelloWorld.hpp  Limits.hpp  Limits.tpp  Math.hpp  Statistics.hpp  String.hpp  Strings.hpp  seed.hpp  std.hpp
src/crypto/: md5sum.cpp
src/filesystem/: fileio.cpp  filepaths.cpp
src/math/: average.cpp  limits.cpp  normalize.cpp  round.cpp
src/misc/: argsparser.cpp  helloworld.cpp
src/strings/: char_case.cpp  clean_decimals.cpp  string.cpp  trim_char.cpp
